--- a/next-mist/post.hbs
+++ b/next-mist/post.hbs
@@ -48,10 +48,10 @@
             <p align="center"><完></p>
         <aside>
             {{#next_post}}
-            <div align="justify"><a href="{{url}}">新一篇:{{title}}</a></div>
+            <div align="justify" style="float:left; display:inline"><a href="{{url}}">新一篇:{{title}}</a></div>
             {{/next_post}}
             {{#prev_post}}
-            <div align="justify"><a href="{{url}}">旧一篇:{{title}}</a></div>
+            <div align="justify" style="float:right; display:inline"><a href="{{url}}">旧一篇:{{title}}</a></div>
             {{/prev_post}}
         </aside>
         <hr style="height:1px;border:none;border-top:1px dashed #0066CC;" />
