--- a/next-mist/post.hbs
+++ b/next-mist/post.hbs
@@ -46,15 +46,16 @@
             </div>
         </div>
             <p align="center"><完></p>
+        <hr style="height:1px;border:none;border-top:1px dashed #0066CC;" />
         <aside>
             {{#next_post}}
-            <div align="justify" style="float:left; display:inline"><a href="{{url}}">新一篇:{{title}}</a></div>
+            <div align="justify" style="float:left; display:inline"><a href="{{url}}">新的一篇</a></div>
             {{/next_post}}
             {{#prev_post}}
-            <div align="justify" style="float:right; display:inline"><a href="{{url}}">旧一篇:{{title}}</a></div>
+            <div align="justify" style="float:right; display:inline"><a href="{{url}}">旧的一篇</a></div>
             {{/prev_post}}
         </aside>
-        <hr style="height:1px;border:none;border-top:1px dashed #0066CC;" />
+        <br />
         <h5 align="center">评论框君很顽皮，可能需要科学上网才能看到哟~</h5>
         <div class="comments" id="comments">
             <!-- 页面绑定 - 请勿改动 -->
